[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9.7"
requests = "^2.26.0"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
